--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Professional portfolio showcasing creative work and skills">
     <meta name="keywords" content="portfolio, web developer, designer, creative, projects">
     <meta name="author" content="Your Name">
-    <title>Platfolio | Creative Portfolio</title>
+    <title>Portfolio | Creative Portfolio</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
@@ -336,7 +336,7 @@
                             <div class="skill-icon">
                                 <i class="fas fa-meteor"></i>
                             </div>
-                            <h4>Twinkle CSS</h4>
+                            <h4>Tailwind CSS</h4>
                             <div class="skill-progress">
                                 <div class="progress-bar" data-width="50%"></div>
                             </div>
@@ -347,7 +347,7 @@
                             <div class="skill-icon">
                                 <i class="fab fa-git-alt"></i>
                             </div>
-                            <h4>Git</h4>
+                            <h4>Git Version controll</h4>
                             <div class="skill-progress">
                                 <div class="progress-bar" data-width="60%"></div>
                             </div>
@@ -440,7 +440,8 @@
                             </div>
                             <div class="project-links">
                                 <a href="https://github.com/AliCodeStorm/FasionNest" class="btn btn-sm">View Project</a>
-                                <a href="https://github.com/AliCodeStorm/FasionNest" class="btn btn-sm btn-outline">Source Code</a>
+                                <a href="https://github.com/AliCodeStorm/FasionNest"
+                                    class="btn btn-sm btn-outline">Source Code</a>
                             </div>
                         </div>
                     </div>
@@ -470,8 +471,10 @@
                                 <span>GSAP</span>
                             </div>
                             <div class="project-links">
-                                <a href="https://alicodestorm.github.io/Platfolio-website/" target="_blank" class="btn btn-sm">Demo</a>
-                                <a href="https://github.com/AliCodeStorm/Platfolio-website" class="btn btn-sm btn-outline">Source Code</a>
+                                <a href="https://alicodestorm.github.io/Platfolio-website/" target="_blank"
+                                    class="btn btn-sm">Demo</a>
+                                <a href="https://github.com/AliCodeStorm/Platfolio-website"
+                                    class="btn btn-sm btn-outline">Source Code</a>
                             </div>
                         </div>
                     </div>
@@ -561,6 +564,21 @@
                         <div class="contact-details">
                             <h4>Development</h4>
                             <p>Open to collaboration on web projects</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <div class="contact-icon">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                        <div class="contact-details">
+                            <h4>Linked In</h4>
+                            <p>
+                            <div class="badge-base LI-profile-badge" data-locale="en_US"          data-size="large" data-theme="light" data-type="HORIZONTAL"   data-vanity="ali-raza-7b735834b" data-version="v1">
+                                <a class="badge-base__link LI-simple-link"
+                                    href="https://pk.linkedin.com/in/ali-raza-7b735834b?trk=profile-badge">Ali Raza
+                                </a>
+                            </div>
+                            </p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -678,6 +696,7 @@
     </a>
 
     <!-- JavaScript Libraries -->
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
