--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Platfolio. All Rights Reserved.</p>
+                <p>&copy; 2023 Portfolio. All Rights Reserved.</p>
                 <div class="footer-bottom-links">
                     <a href="#">Privacy Policy</a>
                     <a href="#">Terms of Service</a>
